# cocoapatcher

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  united.py  united.spec
.github/workflows/: ci.yml  release.yml
cocoapatcher/: __init__.py  paths.py
cocoapatcher/assets/clover/: BOOTX64.EFI  README.md
cocoapatcher/assets/oclp/: merge_oclp_settings.py
cocoapatcher/cli/: main.py
cocoapatcher/core/: device_compatibility.py  device_source.py  efi_builder.py  efi_marketplace.py  hardware_report.py  hardware_sniffer.py  installer_usb.py  installer_usb_windows.py  macos_versions.py  oclp_embed.py  oclp_settings.py  oclp_targeting.py  opcore_static.py  report_validation.py  smbios_picker.py
cocoapatcher/core/boot/: gpt_opencore.py  mbr_clover.py
cocoapatcher/core/usb/: base.py  linux.py  macos.py  windows.py
cocoapatcher/gui/: app.py  report_workflow.py
cocoapatcher/gui/tabs/: easy_mode.py  efi_build.py  oclp_launch.py  usb_create.py
cocoapatcher/gui/widgets/: common.py  device_source.py  gpu_fix_dialog.py  log_progress.py  marketplace.py
scripts/: build_united.ps1  build_windows.ps1  vendor_paths.json
